--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 
 body{
   
-  font-family: "Architects Daughter", cursive;
+  font-family:cursive;
   background-color: black;
   color: #fff;
   overflow: none;
