--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 
 body{
   
-  font-family:cursive;
+  font-family:arrial;
   background-color: black;
   color: #fff;
   overflow: none;
@@ -190,5 +190,65 @@ textarea{
   }
 }
 
+/* styling the responsive view of the tablet view */
+@media only screen and (max-width: 760px){
+  main{
+    width: 100%;
+    height: 100vh;
+    border-radius:0px;
+    margin-top: 0px;
+  }
 
+  .chats{
+    height: 75vh;
+  }
+  
+  .chats div.assistant{
+    width: 60%;
 
+  }
+  
+  .chats div.assistant p.assistant{
+    background-color: #e0d9d9;
+    color: #3b3b3b;
+    width: 80%;
+  }
+  
+}
+
+/* styling the responsive view of the mobile view*/
+@media only screen and (max-width: 460px){
+  main{
+    width: 100%;
+    height: 100vh;
+    border-radius:0px;
+  }
+
+  .chats{
+    height: 85vh;
+  }
+  
+  .chats div.assistant{
+    width: 80%;
+
+  }
+  
+  .chats div.assistant p.assistant{
+    background-color: #817e7e75;
+    color: #c9c9c9;
+    width: 100%;
+  }
+
+  .form{
+    width: 100%;
+    bottom: -75px;
+  
+  }
+  
+  textarea{
+    padding: 5px;
+    color: #e7e7e7;
+    font-size: 18px;
+  }
+  
+}
