--- a/css/styles.css
+++ b/css/styles.css
@@ -218,14 +218,46 @@ textarea{
 
 /* styling the responsive view of the mobile view*/
 @media only screen and (max-width: 460px){
+  main #clearBtn{
+    background-color: rgba(255, 0, 0, 0);
+  }
+
+  main #clearBtn:hover{
+    background-color: red;
+    color: white;
+    border-radius: 19px;
+    font-size: 14px;
+    cursor: pointer;
+  }
+
   main{
     width: 100%;
-    height: 100vh;
+    height: 86vh;
     border-radius:0px;
   }
 
+  .logo-container{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border-bottom: 1px solid gray;
+    padding: 10px;
+  }
+
+  .logo-container span{
+    font-size: 14px;
+  }
+  
+  .logo-container img{
+    border: 2px solid gray;
+    padding: 5px;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+  }
+
   .chats{
-    height: 85vh;
+    height: 70vh;
   }
   
   .chats div.assistant{
