--- a/css/styles.css
+++ b/css/styles.css
@@ -219,29 +219,25 @@ textarea{
 /* styling the responsive view of the mobile view*/
 @media only screen and (max-width: 460px){
   main #clearBtn{
-    background-color: rgba(255, 0, 0, 0);
-  }
-
-  main #clearBtn:hover{
     background-color: red;
     color: white;
-    border-radius: 19px;
+    border-radius: 5px;
     font-size: 14px;
     cursor: pointer;
+    top: 10px;
+    padding: 5px;
   }
 
   main{
     width: 100%;
-    height: 86vh;
+    height: 87vh;
     border-radius:0px;
   }
 
   .logo-container{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    border-bottom: 1px solid gray;
-    padding: 10px;
+    position: fixed;
+    width: 100%;
+    left: 0;
   }
 
   .logo-container span{
